# Mollyslab

./: .env.example  .gitignore  ABOUT.md  Anchor.toml  Cargo.toml  INSTALLATION.md  PULL_REQUEST_TEMPLATE.md  README.md  docker-compose.yml  index.html  package.json  pyproject.toml  sentience_modules
.github/workflows/: ci  ci.yml
Sphinx/ledger/: offline_outbox.py  solana_nonce.py
agent/: core.py  introspection.py
api/: main.py
case_studies/: agent_self_reflection_case_study.md  social_sentiment_case_study.md  token_launch_case_study.md
cli/: Cargo.toml
cli/src/: main.rs
community/: roadmap.md
core/: emotion_engine.py  memory.py  response.py
docs/: CONTRIBUTING.md  INSTALLATION.md
docs/docs/: API.md
experiments/: README.md  emotion_benchmark.ipynb  kimi_k2_comparison.md  sentiment_profiles.json
offchain/: molly.ts
offchain/bridges/: bridge.ts  index.ts  wormhole.ts
offchain/src/: orchestrator.ts
programs/router/: Cargo.toml
programs/router/src/: lib.rs
programs/slab/: Cargo.toml
programs/slab/src/: lib.rs
research/: README.md  azumi_whitepaper.md  emotional_architecture.md
research/metrics/: empathy_index.csv
scripts/: analyze_emotions.py
sentience_modules/: emotion_engine.py  introspection.py  memory.py
tests/: admin-controls.ts  mandate-oracle.ts  slab-edges.ts  test_emotion.py  test_introspection.py
use_cases/: README.md  creative_writing.md  emotional_reflection.md  terminal_reflection.md
utils/: feelings_loader.py
