[workspace]
members = [
  "programs/router",
  "programs/slab",
  "cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["MollySlab Contributors"]

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
figlet-rs = "0.1.5"
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
