[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sphinxllm"
version = "0.1.0"
description = "SphinxLLM — a system-native, on-device LLM runtime with audited capabilities and local approvals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SphinxLLM contributors" }
]
keywords = ["llm", "on-device", "runtime", "automation", "privacy", "local-first"]

# Core runtime deps kept lean and portable
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "platformdirs>=4.2",
  "pyyaml>=6.0",
  "cryptography>=42.0",
  "msgspec>=0.18",
  "orjson>=3.10",
  "uvloop>=0.19; sys_platform != 'win32'",
]

# Optional backends/connectors; install with: pip install .[gguf,onnx,audio,dev]
[project.optional-dependencies]
gguf = [
  "llama-cpp-python>=0.2.90",
]
onnx = [
  "onnxruntime>=1.18.0",
]
audio = [
  "sounddevice>=0.4",
  "numpy>=1.26",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "black>=24.8",
  "types-PyYAML>=6.0.12.20240808",
  "types-orjson>=3.6.2",
]

[project.urls]
Homepage = "https://example.com/sphinxllm"
Repository = "https://github.com/your-org/sphinxllm"
Issues = "https://github.com/your-org/sphinxllm/issues"

[project.scripts]
sphinx = "sphinx.cli:app"

# ───────────── Testing ─────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = [
  "Sphinx/tests",
  "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

# ───────────── Lint / Format ─────────────
[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
select = [
  "E", "F",    # pycodestyle/pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "W",        # warnings
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
  "C4",       # comprehensions
]
ignore = [
  "E203",     # handled by Black
]
exclude = ["dist", "build", ".venv", ".git"]

[tool.ruff.isort]
known-first-party = ["sphinx"]

[tool.black]
line-length = 100
target-version = ["py310"]

# ───────────── Typing ─────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = []
# Allow optional backends to be absent during type-check
ignore_missing_imports = true

# ───────────── Coverage (optional) ─────────────
[tool.coverage.run]
branch = true
source = ["sphinx"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

# ───────────── Hatch build config ─────────────
[tool.hatch.build]
include = [
  "sphinx/**",
  "Sphinx/tests/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
