[tool.poetry]
name = "azumi"
version = "0.1.0"
description = "CLI + API for Azumi, emotional agent built on Kimi K2"
authors = ["Azumi Labs <contact@azumi.dev>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
