[package]
name = "molly-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
figlet-rs = { workspace = true }
serde = { workspace = true, features=["derive"] }
serde_json = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }
router = { path = "../programs/router", features=["no-entrypoint"] }
slab = { path = "../programs/slab", features=["no-entrypoint"] }
